# Rust_server_exercise

./: Cargo.toml  README.md
src/: extractor.rs  handlers.rs  lib.rs  main.rs  middleware.rs  structs.rs
src/core/: errors.rs  func.rs  handlers.rs  mod.rs  structs.rs
src/middlewares/: mod.rs  modify_res.rs  plain_middleware.rs  timeout_middleware.rs
src/services/: mod.rs
src/services/middlewares/: mod.rs  modify_res_layer.rs
src/services/service_wrapper/: mod.rs  router_wrapper.rs
src/tools/: mod.rs  my_loggers.rs
